--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Python-generated files
 __pycache__/
 *.py[oc]
 build/
@@ -6,8 +5,9 @@ dist/
 wheels/
 *.egg-info
 
-# Virtual environments
 .venv
 
 sandbox*
 *cache*
+
+.vscode/settings.json
