--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.0",
     "scipy>=1.15.1",
+    "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
 dev = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.6",
+    "mkdocstrings[python]>=0.28.2",
     "pytest>=8.3.4",
+    "ruff>=0.9.9",
 ]
