--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.0",
+    "narwhals>=1.28.0",
     "scipy>=1.15.1",
     "seaborn>=0.13.2",
 ]
