switch doc to sphinx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.4",
     "ruff>=0.9.9",
+    "sphinx>=8.2.3",
+    "sphinx-autoapi>=3.6.0",
 ]
