--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,15 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.1.0",
     "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.4",
     "ruff>=0.9.9",
     "sphinx>=8.2.3",
+    "sphinx-copybutton>=0.5.2",
+]
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::UserWarning",
 ]
