--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "polars>=1.24.0",
     "pre-commit>=4.1.0",
     "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.4",
@@ -25,3 +26,6 @@ dev = [
 filterwarnings = [
     "ignore::UserWarning",
 ]
+
+[tool.setuptools]
+include-package-data = true
