--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -1,8 +1,6 @@
-name: Deploy doc to GitHub Pages
+name: Deploy Sphinx Docs to GitHub Pages
 
 on:
-  pull_request:
-    branches: [main]
   push:
     branches:
       - main
@@ -20,24 +18,19 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: Enable caching
-        uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
-
-      - name: Install the project
-        run: uv sync --all-extras --dev
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+          pip install sphinx
 
       - name: Build Sphinx documentation
         run: |
-          cd doc
+          cd docs
           make html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/_build/html
+          publish_dir: ./docs/_build/html
