--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser
+          pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton
       - name: Sphinx build
         run: |
           sphinx-build doc/source _build
