--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -14,6 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton
+          pip install -e .
       - name: Sphinx build
         run: |
           sphinx-build doc/source _build
