--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -15,6 +15,7 @@ jobs:
         run: |
           pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton
           pip install -e .[dev]
+          pip install -e .
       - name: Sphinx build
         run: |
           sphinx-build doc/source _build
