--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton
+          pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton pandas
           pip install -e .[dev]
       - name: Sphinx build
         run: |
