--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton
-          pip install -e .
+          pip install sphinx pydata-sphinx-theme myst_parser matplotlib sphinx-copybutton pandas
+          pip install -e .[dev]
       - name: Sphinx build
         run: |
           sphinx-build doc/source _build
