--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dev = [
     "pandas>=2.2.3",
     "polars>=1.24.0",
     "pre-commit>=4.1.0",
+    "pyarrow>=19.0.1",
     "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.4",
     "ruff>=0.9.9",
