--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -14,6 +14,7 @@ theme:
 
 plugins:
   - search
+  - mkdocs_matplotlib
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -33,7 +34,13 @@ nav:
 extra_css:
   - stylesheets/style.css
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
 markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.highlight:
