--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,9 +1,10 @@
-site_name: inferplot
-site_url: https://y-sunflower.github.io/inferplot/
-repo_url: https://github.com/y-sunflower/inferplot
+site_name: fleur
+site_url: https://y-sunflower.github.io/fleur/
+repo_url: https://github.com/y-sunflower/fleur
 
 theme:
   name: material
+  custom_dir: overrides
   features:
     - content.code.copy
     - navigation.path
@@ -13,6 +14,7 @@ theme:
 
 plugins:
   - search
+  - mkdocs_matplotlib
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -32,7 +34,13 @@ nav:
 extra_css:
   - stylesheets/style.css
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
 markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.highlight:
