--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fleur"
 description = "Description"
-version = "0.1.0"
+version = "0.0.1"
 license = "MIT"
 license-files = ["LICENSE"]
 keywords = ["stats", "visualization"]
@@ -48,6 +48,9 @@ quarto = [
     "jupyter>=1.1.1",
     "nbclient>=0.10.2",
     "nbformat>=5.10.4",
+]
+readme = [
+    "great-tables>=0.17.0",
 ]
 
 [project.urls]
