--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           enable-cache: true
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+
       - name: Install the project
         run: uv sync --all-extras --dev
 
