--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -29,6 +29,7 @@ nav:
   - Examples: examples.md
   - Reference:
       - reference/betweenstats.md
+      - reference/scatterstats.md
       - reference/datasets.md
   - Contributing: contributing.md
 
@@ -36,7 +37,6 @@ extra_css:
   - stylesheets/style.css
 
 extra_javascript:
-  - javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 markdown_extensions:
