--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "polars>=1.30.0",
     "pandas>=2.2.3",
     "pytest-cov>=6.1.1",
+    "genbadge>=1.1.2",
 ]
 quarto = [
     "jupyter>=1.1.1",
