--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
+        with:
+          fail_ci_if_error: true
+          verbose: true
 
       - name: Install the project
         run: uv sync --all-extras --dev
