--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,8 +11,6 @@ jobs:
       matrix:
         python-version:
           - "3.10"
-          - "3.11"
-          - "3.12"
           - "3.13"
     env:
       UV_PYTHON: ${{ matrix.python-version }}
@@ -27,11 +25,13 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-
       - name: Install the project
         run: uv sync --all-extras --dev
 
       - name: Run tests
         run: uv run pytest
+
+      - name: Run coverage
+        run: |
+          uv run coverage run --source=fleur -m pytest
+          uv run coverage report -m
